将所有的属性都存储为一个VBO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,8 @@ set(CMAKE_CXX_STANDARD 17)
 add_definitions(-DDEBUG)
 
 add_executable(OpenGLStudy main.cpp glad.c)
-target_include_directories(OpenGLStudy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/include)
-target_link_directories(OpenGLStudy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/lib)
-
+target_include_directories(OpenGLStudy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/include)
+target_link_directories(OpenGLStudy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/lib)
 
 add_subdirectory(wrapper)
 add_subdirectory(application)
