绘制三角形

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(OpenGL_study)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# 编码设置
+add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
+add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
+
 # 在项目中加入一个全局的预编译宏
 add_definitions(-DDEBUG)
 
