--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,15 @@ add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 # 在项目中加入一个全局的预编译宏
 add_definitions(-DDEBUG)
 
-add_executable(OpenGLStudy main.cpp glad.c)
-target_include_directories(OpenGLStudy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/include)
-target_link_directories(OpenGLStudy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/lib)
-
 add_subdirectory(wrapper)
 add_subdirectory(application)
-target_link_libraries(OpenGLStudy PRIVATE glfw3 openGL32 wrapper app)
+add_subdirectory(glframework)
+
+add_executable(OpenGLStudy main.cpp glad.c)
+
+target_link_directories(OpenGLStudy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/lib)
+target_link_libraries(OpenGLStudy PRIVATE glfw3 openGL32 wrapper app fw)
+
+file(GLOB ASSETS assets)
+add_custom_command(TARGET OpenGLStudy POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${ASSETS} $<TARGET_FILE_DIR:OpenGLStudy>/assets)
