设计相机的ViewMatrix的数据系统

--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -1,5 +1,5 @@
-file(GLOB_RECURSE APPLICATION ./src *.cpp)
+file(GLOB_RECURSE APPLICATION . *.cpp)
 
 add_library(app ${APPLICATION})
-target_include_directories(app PRIVATE ${PROJECT_SOURCE_DIR}/thirdParty/include)
-target_include_directories(app PUBLIC include)
+target_include_directories(app PRIVATE ${PROJECT_SOURCE_DIR}/thirdParty/include ${PROJECT_SOURCE_DIR}/glframework/include)
+target_include_directories(app PUBLIC include camera/include)
